--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h2 id="summary">Summary:</h2>
 <p>The POSIX standard for shared condition variables across processes is honored by most UNIX implementations except Linux. In order to provide uniform behavior of the condition variable mechanism a different solution for Linux had to be divined. The code examples provided here demonstrate one solution using signaling.</p>
 <ul>
-<li>Author: Karl N. Redman</li>
+<li>Author: Karl N. Redman (<a href="http://karlredman.github.io">Personal Home Page</a>)</li>
 <li><a href="http://karlredman.github.io/cond-var">Project Home Page</a></li>
 <li><a href="https://github.com/karlredman/cond-var">Github Project Page</a></li>
 <li>Download package <a href="https://github.com/karlredman/cond-var/archive/master.zip">Zip file</a></li>
@@ -42,15 +42,3 @@
 <p>It should be noted that in order to use a sleep routine within the consumer process a special signal handler must be installed. This signal handler must block receipt of a continue signal which may be sent from the producer at any time. If SIGCONT were not blocked, the consumer process would wake up as soon as the producer process sent it a SIGCONT.</p>
 <h2 id="conclusion">Conclusion:</h2>
 <p>The result of all this is that you end up with one producer process and a bunch of consumer processes that only use as much processor time as is required. If you were to remove the condition variable mechanism here, a single consumer would continuously poll the producers data position, thereby causing the CPU to be used far more than is necessary.</p>
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-<!--****************************************************************************************************************************************************     -->
-<!--
-<script>
-(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-                                                        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
- e=o.createElement(i);r=o.getElementsByTagName(i)[0];
- e.src='//www.google-analytics.com/analytics.js';
- r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-ga('create','UA-75185002-1');ga('send','pageview');
-</script>
--->
